--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 plugins {
-	id 'org.springframework.boot' version '2.4.2'
-	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
-	id 'groovy'
+    id 'org.springframework.boot' version '2.4.2'
+    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
+    id 'groovy'
 }
 
 group = 'dawid.kotarba'
@@ -9,25 +9,28 @@ version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '11'
 
 repositories {
-	mavenCentral()
-}
-
-ext {
-	set('vaadinVersion', "14.4.6")
-}
-
-dependencies {
-	implementation 'com.vaadin:vaadin-spring-boot-starter'
-	implementation 'org.codehaus.groovy:groovy'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    mavenCentral()
 }
 
 dependencyManagement {
-	imports {
-		mavenBom "com.vaadin:vaadin-bom:${vaadinVersion}"
-	}
+    imports {
+        mavenBom "com.vaadin:vaadin-bom:14.4.6"
+    }
+}
+
+dependencies {
+    implementation 'com.vaadin:vaadin-spring-boot-starter'
+    implementation 'org.codehaus.groovy:groovy'
+    implementation 'com.google.guava:guava:30.1-jre'
+
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    // Spock
+    testImplementation "org.codehaus.groovy:groovy-all:2.5.13"
+    testImplementation "org.spockframework:spock-core:2.0-M3-groovy-2.5"
+    testImplementation "org.spockframework:spock-spring:2.0-M3-groovy-2.5"
 }
 
 test {
-	useJUnitPlatform()
+    useJUnitPlatform()
+    testLogging.showStandardStreams = true
 }
