--- a/build.gradle
+++ b/build.gradle
@@ -19,9 +19,10 @@ dependencyManagement {
 }
 
 dependencies {
-    implementation 'com.vaadin:vaadin-spring-boot-starter'
     implementation 'org.codehaus.groovy:groovy'
     implementation 'com.google.guava:guava:30.1-jre'
+    implementation 'com.vaadin:vaadin-spring-boot-starter'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
