Update GH actions

--- a/build.gradle
+++ b/build.gradle
@@ -38,3 +38,7 @@ test {
     useJUnitPlatform()
     testLogging.showStandardStreams = true
 }
+
+bootJar {
+    archiveFileName = 'automater.jar'
+}
