--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'org.springframework.boot' version '2.7.11'
     id 'io.spring.dependency-management' version '1.1.0'
     id 'groovy'
+    id 'com.vaadin' version '0.14.9.1'
 }
 
 group = 'dawid.kotarba'
@@ -42,3 +43,10 @@ test {
 bootJar {
     archiveFileName = 'automater.jar'
 }
+
+vaadin {
+    productionMode=true
+    pnpmEnable=true
+}
+
+defaultTasks('clean', 'vaadinBuildFrontend', 'bootJar')
