--- a/build.gradle
+++ b/build.gradle
@@ -22,10 +22,10 @@ dependencyManagement {
 
 dependencies {
     implementation 'org.codehaus.groovy:groovy'
+    implementation 'org.codehaus.groovy:groovy-json:2.5.22'
     implementation 'com.google.guava:guava:31.1-jre'
     implementation 'com.vaadin:vaadin-spring-boot-starter'
     implementation 'org.springframework.boot:spring-boot-starter-web'
-    developmentOnly 'org.springframework.boot:spring-boot-devtools'
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     
