--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,3 @@
-server.address=127.0.0.1
+# Uncomment server.address to block requests from other machines
+# server.address=127.0.0.1
 server.port=9999
